# practica2-modelado

./: .gitignore  README.md  practica2_notebook.ipynb  pyproject.toml
artifacts/: feature_schema.json
src/: practica2_model.py
